syntax = "proto3";

message EndPoint {
    string ip = 1;
    int64 port = 2;
}

message LogSeq {
    // term of last log
    int64 term = 1;
    // index of last log
    int64 index = 2;
}

message VoteRequest {
    // id of candidate
    EndPoint end_point = 1;
    // term of candidate holding
    int64 term = 2;
    // last seq of logs of candidate
    LogSeq last_log_seq = 3;
}

message VoteResponse {
    // term of follower holding
    int64 term = 1;
    // last seq of logs of follower
    LogSeq last_log_seq = 2;
    // vote for candidate or not
    bool granted = 3;
}

message AppendRequest {
    // id of leader
    EndPoint end_point = 1;
    // term of leader
    int64 term = 2;
}

message AppendResponse {
    // id of follower
    EndPoint end_point = 1;
    // term of peer
    int64 term = 2;
    // append successful or not
    bool success = 3;
}

service PeerGRPC {
    rpc Vote(VoteRequest) returns (VoteResponse) {}

    rpc Append(AppendRequest) returns (AppendResponse) {}
}
